--- a/Dionysus/Views/Cocktail/ShowCocktail.cshtml
+++ b/Dionysus/Views/Cocktail/ShowCocktail.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Dionysus.ViewModel.CocktailViewModel>
+﻿@model Dionysus.ViewModels.CocktailViewModel
 
 @{
     ViewBag.Title = "ShowCocktail";
@@ -9,18 +9,26 @@
 <table border="1">
     <tr>
         <th>Name</th>
+        <th>Category</th>
         <th>Glass</th>
         <th>Skill</th>
         <th>Ingredients</th>
     </tr>
-    @foreach (var item in Model)
+    @foreach (var item in Model.cocktailList)
     {
         <tr>
-            <td>@item.cocktail.Name</td>
-            <td>@item.cocktail.Glass</td>
-            <td>@item.cocktail.Skill</td>
+            <td>@item.Name</td>
             <td>
-                @foreach (var ing in item.cocktail.Ingredients)
+                @foreach (var cat in item.Category)
+                {
+                    @cat.ToString()
+                    <br/>
+                }
+            </td>
+            <td>@item.Glass</td>
+            <td>@item.Skill</td>
+            <td>
+                @foreach (var ing in item.Ingredients)
                 {
                     @ing.Name
                     @Html.Raw("&nbsp;")
